# CourseraWorks

./: CMakeLists.txt  Class Matrix.cpp  Class Matrix.h  Class Person.h  Class Rational.h  Format samples.cpp  INPUT.txt  Testing Framework.h  main.cpp
Class Matrix/: Class Matrix.cpp
Class Person/: Class Person.h
Class Rational/: Class Rational.cpp  Class Rational.h
Database/: condition_parser.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  main_DB.cpp  node.cpp  node.h  test_runner.cpp  test_runner.h
Testing Framework/: Testing Framework.cpp  Testing Framework.h
parse/: xml.h
stuff/: outputs.h  profile.h  testing_framework.cpp  testing_framework.h
